@@ -9,6 +9,7 @@ if version_info[0] <= 2:
     str2octs = lambda x: x
     octs2str = lambda x: x
     isOctetsType = lambda s: isinstance(s, str)
+    isStringType = lambda s: isinstance(s, (str, unicode))
 else:
     ints2octs = bytes
     int2oct = lambda x: ints2octs((x,))
@@ -18,3 +19,4 @@ else:
     str2octs = lambda x: x.encode()
     octs2str = lambda x: x.decode()
     isOctetsType = lambda s: isinstance(s, bytes)
+    isStringType = lambda s: isinstance(s, str)
