@@ -4,6 +4,7 @@ Revision 0.1.9
 - Wheel distribution format now supported.
 - Extensions added to text files, CVS attic flushed.
 - Fix to make uninitilaized pyasn1 objects failing properly on hash().
+- Fix to ObjectIdentifier initialization from unicode string.
 
 Revision 0.1.8, released 22-06-2015
 -----------------------------------
